--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -3,7 +3,7 @@
     <li *ngFor="let product of products" >
       <app-product 
         [product]="product"
-        (buy)="onBuy($event)"></app-product>
+        (addToCartEvent)="onAddToCart($event)"></app-product>
     </li>
   </ul>
 </div>
