--- a/src/app/products/product-list/product/product.component.html
+++ b/src/app/products/product-list/product/product.component.html
@@ -1,23 +1,25 @@
 <div>
-  <p>Name: {{product.name}}</p>
-  <p>description: {{product.description}}</p>
-  <p>price: {{product.price}}</p>
-  <p>category: {{product.category}}</p>
-  <span>is available:</span>
-  <input type="checkbox" [checked]="product.isAvailable" readonly disabled>
-  <p>ingredients:</p>
-  <ul>
-    <li *ngFor="let ingredient of product.ingredients">{{ingredient}}</li>
-  </ul>
-  <p>equivalents:</p>
-  <ul>
-      <li *ngFor="let equivalent of product.equivalents">{{equivalent}}</li>
-  </ul>
+  <p class="caption">{{product.name}}</p>
+  <p><b>description: </b>{{getDescription()}}</p>
+  <p><b>price: </b>{{product.price}}</p>
+  <p><b>category: </b>{{getProductCategoryEnumString(product.category)}}</p>
+  <p><b>is available:</b>
+      <input type="checkbox" [checked]="product.isAvailable" readonly disabled>
+  </p>
+  
+  <p><b>ingredients: </b>{{product.ingredients.join(', ')}}</p>
+  <p *ngIf="hasEquivalents(product)"><b>equivalents: </b>{{product.equivalents.join(', ')}}</p>
   <!-- Q: This one doesnt work for some reason (ngIf crashes when #amount is added)
      <input type="number" *ngIf="product.isAvailable" #amount (click)="0" (keyup)="0" value="1"> -->
-  <div *ngIf="product.isAvailable">
-    <input type="number" #amount (click)="0" (keyup)="0" value="1">
-    <input type="button" (click)="addToCart(product, amount.value)" value="Add to cart">
+  <div class="form-inline">
+    <input type="number" value="1" class="form-control"
+      #amount 
+      (click)="0" 
+      (keyup)="0"
+      [attr.disabled]="getDisabledAttrForProduct(product)">
+    <input type="button" value="Add to cart" class="btn btn-primary" 
+      [attr.disabled]="getDisabledAttrForProduct(product)"
+      (click)="addToCart(product, amount.value)">
   </div>
 </div>
 <hr>
