--- a/src/app/products/product-list/product/product.component.html
+++ b/src/app/products/product-list/product/product.component.html
@@ -2,7 +2,7 @@
   <p class="caption">{{product.name}}</p>
   <p><b>description: </b>{{getDescription()}}</p>
   <p><b>price: </b>{{product.price}}</p>
-  <p><b>category: </b>{{getProductCategoryEnumString(product.category)}}</p>
+  <p><b>category: </b>{{getProductCategoryEnumString()}}</p>
   <p><b>is available:</b>
       <input type="checkbox" [checked]="product.isAvailable" readonly disabled>
   </p>
