--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   Welcome to {{ title }}!
 </h1>
  
+<!-- shop -->
 <app-product-list 
   (addToCartEvent)="onAddToCart($event)"></app-product-list>
  
@@ -11,3 +12,6 @@
   (cancelCartEvent)="onCancelCart($event)"></app-cart>
 
 <app-order-list></app-order-list>
+
+<!-- services -->
+<!-- <app-service-test></app-service-test> -->
