--- a/src/app/cart/components/cart-list/cart-list.component.html
+++ b/src/app/cart/components/cart-list/cart-list.component.html
@@ -1,5 +1,9 @@
 <div *ngIf="hasItems()">
-  <p class="caption">Your cart:</p>
+  <p class="caption">
+    Your cart:
+    <input type="button" class="btn btn-danger" value="Clear"
+      (click)="clearCart()">
+  </p>
   <ul>
     <li *ngFor="let item of cartItems" [ngClass]="{ selected: isSelected(item) }">
       <app-cart-item 
