--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="product-container" appBorder="rgba(158, 208, 180, 0.5)">
   <p class="caption">{{product.name}}</p>
   <p><b>description: </b>{{getDescription()}}</p>
   <p><b>price: </b>{{product.price}}</p>
