Task5: add routing (products, cart, orders); add login route; add guarded admin route placeholder

--- a/src/app/order/components/order-list/order-list.component.html
+++ b/src/app/order/components/order-list/order-list.component.html
@@ -1,4 +1,4 @@
-<div class="margin-top-40" *ngIf="hasItems()">
+<div class="margin-top-40 col-md-10" *ngIf="hasItems()">
     <p class="caption">Previous orders:</p>
     <ul>
       <li *ngFor="let item of previousOrders"
