--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,40 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h1>
-  Welcome to {{ title }}!
-</h1>
- 
-<!-- shop -->
-<app-product-list 
-  (addToCartEvent)="onAddToCart($event)"></app-product-list>
- 
-<app-cart
-  (buyEvent)="onBuy($event)"
-  (cancelCartEvent)="onCancelCart($event)"></app-cart>
+<div>
+  <div>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" routerLink="/home">DK Store</a>
+          </div>
 
-<app-order-list></app-order-list>
+          <div>
+            <ul class="nav navbar-nav">
+              <li routerLinkActive="active">
+                <a routerLink="/cart">Your cart</a>
+              </li>
+              <li routerLinkActive="active">
+                <a routerLink="/orders">Previous orders</a>
+              </li>
+              <li routerLinkActive="active">
+                <a routerLink="/login">Login</a>
+              </li>
+              <li routerLinkActive="active">
+                  <a routerLink="/admin">Admin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-<!-- services -->
-<!-- <app-service-test></app-service-test> -->
+      <div class="container">
+        <router-outlet></router-outlet>
+                      <!-- (activate)='onActivate($event)'
+                      (deactivate)='onDeactivate($event)'-->
+      </div>
+  </div> 
+</div>
