--- a/src/app/cart/components/cart-list/cart-list.component.html
+++ b/src/app/cart/components/cart-list/cart-list.component.html
@@ -21,7 +21,7 @@
     </li>
   </ul>
   <p>Total items: {{cartService.totalItems()}}</p>
-  <p>Total price: {{cartService.totalPrice()}}</p>
+  <p>Total price: {{cartService.totalPrice() | currency: 'UAH' }}</p>
 
   <div class="form-inline">
     <input type="button" class="btn btn-success" value="Buy it!"
@@ -29,4 +29,7 @@
     <input type="button" class="btn btn-danger" value="Cancel"
       (click)="cancelCart()">
   </div>
+</div>
+<div *ngIf="!hasItems()">
+  <p class="caption">Your cart is empty</p>
 </div>
