--- a/src/app/products/components/product-long/product-long.component.html
+++ b/src/app/products/components/product-long/product-long.component.html
@@ -1,7 +1,7 @@
-<div class="product-container" appBorder="rgba(158, 208, 180, 0.5)">
+<div *ngIf="product" class="product-container" >
   <p class="caption">{{product.name}}</p>
-  <p><b>description: </b>{{getDescription()}}</p>
-  <p><b>price: </b>{{product.price | currency :  'UAH' }}</p>
+  <p>{{ getLongDescription() }}</p>
+  <p><b>Price: </b>{{product.price | currency :  'UAH' }}</p>
   <p><b>category: </b>{{getProductCategoryEnumString() | uppercase }}</p>
   <p><b>is available:</b>
       <input type="checkbox" [checked]="product.isAvailable" readonly disabled>
