--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,15 @@ ul {
   list-style: none;
   padding: 0px;
 }
+
+table, th, td {
+  border: 1px solid black;
+}
+
+td, th {
+  padding: 5px;
+}
+
+.current {
+  background-color: #c5c5c5;
+}
