Task5: add new product from admin dashboard; refactor; issues fixing

--- a/src/app/admin/manage-products/manage-products.component.html
+++ b/src/app/admin/manage-products/manage-products.component.html
@@ -1,5 +1,5 @@
 <h2>Manage products</h2>
-
+<button class="btn btn-success" (click)="addProduct()">Add product</button>
 <table>
   <tbody>
     <tr>
