--- a/src/app/cart/components/cart-item/cart-item.component.html
+++ b/src/app/cart/components/cart-item/cart-item.component.html
@@ -9,5 +9,5 @@
     [value]="getEditButtonText()" 
     (click)="toggleEditMode()">
   <input type="button" class="btn btn-primary" value="Remove" 
-    (click)="remove()">
+    (click)="removeCartItem()">
 </div>
