--- a/src/app/products/components/product-short/product-short.component.html
+++ b/src/app/products/components/product-short/product-short.component.html
@@ -13,7 +13,7 @@
       [disabled]="getDisabledAttrValue()">
     <input type="button" value="Add to cart" class="btn btn-primary" 
       [disabled]="getDisabledAttrValue()"
-      (click)="addToCart(amount.value)">
+      (click)="addProductToCart(amount.value)">
   </div> -->
 </div>
 <hr>
