--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
                 <a routerLink="/cart">Your cart</a>
               </li>
               <li routerLinkActive="active">
-                <a routerLink="/orders">Previous orders</a>
+                <a routerLink="/orders">Order</a>
               </li>
               <li routerLinkActive="active">
                 <a routerLink="/login">Login</a>
