--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -1,3 +1,3 @@
 <div>
-    <p><b>Order #{{order.id}} (${{ orderPrice() }}), Processed: {{ getCompletedValue() }} (on {{ order.orderDate | async | date : 'medium' }})</b></p>
+    <p><b>Order #{{order.id}} (${{ orderPrice() }}), Processed: {{ getCompletedValue() }} (on {{ order.orderDate | date : 'medium' }})</b></p>
 </div>
